@@ -44,6 +44,7 @@ VERSION 4.2.1
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change	codes and comments
 ----------------------------------------------------------------------------------------
++$pgv_lang["cemetery_report"]						1 Apr 2009				A
 -$pgv_lang["autocomplete"]							27 Mar 2009				D
 *$pgv_lang["individual_list"]						4 Mar 2009				w	removed " List"
 *$pgv_lang["family_list"]							4 Mar 2009				w	removed " List"
