@@ -1,0 +1,67 @@
+<PGVReport access="PRIV_PUBLIC" icon="place">
+	<!-- $Id$ -->
+	<PGVRTitle><PGVRvar var="pgv_lang[cemetery_report]" /></PGVRTitle>
+	<PGVRDescription>Prints a list of individuals burial places matching specific cemetery criteria</PGVRDescription>
+	<PGVRInput name="deathplace" lookup="PLAC" type="text"><PGVRvar var="pgv_lang[deathplace]" /> </PGVRInput>
+	<PGVRInput name="sortby" type="select" options="NAME,BURI,PLAC"><PGVRvar var="pgv_lang[sort_by]" /></PGVRInput>
+	<PGVRInput name="pageSize" type="select" options="letter,A4,A3,A5,legal"><PGVRvar var="pgv_lang[page_size]" /></PGVRInput>
+	<PGVRStyle name="header" font="dejavusans" size="16" style="b" />
+	<PGVRStyle name="pagenum" font="dejavusans" size="8" style="" />
+	<PGVRStyle name="text" font="dejavusans" size="9" style="" />
+	<PGVRStyle name="label" font="dejavusans" size="10" style="b" />
+	<PGVRStyle name="footnote" font="dejavusans" size="8" />
+	<PGVRDoc pageSize="$pageSize" orientation="L" margin="24">
+		<PGVRHeader>
+			<PGVRCell width="0" height="20" align="center" style="header"><PGVRvar var="pgv_lang[cemetery_report]" /></PGVRCell>
+			<PGVRCell width="0" height="10" align="right" style="pagenum"><PGVRvar var="pgv_lang[page]" /> <PGVRPageNum /> <PGVRvar var="pgv_lang[of]" /> <PGVRTotalPages /></PGVRCell>
+			<PGVRTextBox width="40" height="12" border="1">
+				<PGVRText style="label"> </PGVRText>
+			</PGVRTextBox>
+			<PGVRTextBox width="175" height="12" border="1">
+				<PGVRText style="label"><PGVRvar var="pgv_lang[name]" /></PGVRText>
+			</PGVRTextBox>
+			<PGVRTextBox width="100" height="12" border="1">
+				<PGVRText style="label"><PGVRvar var="pgv_lang[date]" /></PGVRText>
+			</PGVRTextBox>
+			<PGVRTextBox width="150" height="12" border="1">
+				<PGVRText style="label"><PGVRvar var="factarray[CEME]" /></PGVRText>
+			</PGVRTextBox>			
+			<PGVRTextBox width="150" height="12" border="1">
+				<PGVRText style="label"><PGVRvar var="factarray[PLAC]" /></PGVRText>
+			</PGVRTextBox>
+			<PGVRTextBox width="0" height="12" border="1" newline="1">
+				<PGVRText style="label"><PGVRvar var="factarray[NOTE]" /></PGVRText>
+			</PGVRTextBox>
+		</PGVRHeader>
+		<PGVRBody>
+			<PGVRList list="individual" filter1="BURI:PLAC CONTAINS $deathplace" sortby="$sortby">
+				<PGVRTextBox width="40" height="12" border="0">
+					<PGVRText style="text"><PGVRGedcomValue tag="@id" /></PGVRText>
+				</PGVRTextBox>
+				<PGVRTextBox width="175" height="12" border="0">
+					<PGVRText style="text"><PGVRGetPersonName id="" /></PGVRText>
+				</PGVRTextBox>
+				<PGVRTextBox width="100" height="12" border="0">
+					<PGVRText style="text"><PGVRGedcomValue tag="BURI:DATE" /></PGVRText>
+				</PGVRTextBox>
+				<PGVRTextBox width="150" height="12" border="0">
+					<PGVRText style="text"><PGVRGedcomValue tag="BURI:CEME" /></PGVRText>				
+				</PGVRTextBox>
+				<PGVRTextBox width="150" height="12" border="0" newline="0">
+					<PGVRText style="text"><PGVRGedcomValue tag="BURI:PLAC" /></PGVRText>
+				</PGVRTextBox>
+				<PGVRTextBox width="0" height="12" border="0" newline="1">
+					<PGVRText style="text"><PGVRGedcomValue tag="BURI:NOTE" /></PGVRText>
+				</PGVRTextBox>
+			</PGVRList>
+			<PGVRCell width="0" height="12" border="0" align="right" style="label">
+				<br /><PGVRvar var="pgv_lang[total_indis]" />: <PGVRListTotal />
+			</PGVRCell>
+		</PGVRBody>
+		<PGVRFooter>
+			<PGVRCell style="footnote"><PGVRNow /></PGVRCell>
+		</PGVRFooter>
+	</PGVRDoc>
+</PGVReport>
+
+ 	  	 
